# ark-services

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  entities.md  generate_sqlx.sh
ark-dynamodb/: Cargo.toml
ark-dynamodb/src/: convert.rs  lib.rs  metadata_storage.rs  pagination.rs  storage.rs
ark-dynamodb/src/block/: dynamo_provider.rs  mod.rs  types.rs
ark-dynamodb/src/collection/: dynamo_provider.rs  mod.rs  types.rs
ark-dynamodb/src/contract/: dynamo_provider.rs
ark-dynamodb/src/event/: dynamo_provider.rs  mod.rs  types.rs
ark-dynamodb/src/providers/: mod.rs
ark-dynamodb/src/storage/: mod.rs
ark-dynamodb/src/token/: dynamo_provider.rs  mod.rs  types.rs
ark-indexer/: Cargo.toml  README.md
ark-indexer-marketplace/: .env.example  Cargo.toml  README.md
ark-indexer-marketplace/src/: main.rs  pontos_observer.rs  sana_observer.rs
ark-indexer-transactions/: Cargo.toml
ark-indexer-transactions/.sqlx/: query-9ad6e0e3f0c54c348cdcf2d9cfb083df97fdd146a9bb51a03cc42e9d06b7187a.json
ark-indexer-transactions/debian/: ark-indexer-transactions-dev.service  ark-indexer-transactions-production.service  ark-indexer-transactions-staging.service  ark-indexer-transactions.service  ark-indexer-transactions@.service  control  install
ark-indexer-transactions/debian/scripts/: postinst  postrm  (+2 more)
ark-indexer-transactions/src/: main.rs
ark-indexer/src/: aws_s3_file_manager.rs  dynamo_storage.rs  file_manager.rs  main.rs  pontos_observer.rs
ark-marketplace-api/: .env.example  Cargo.toml  PERFORMANCE.md  git-version
ark-marketplace-api/.sqlx/: query-0b933c355cf0fbada565e4303c655155305a92bd01d1278fbb10a5a7755a91aa.json  query-15ab7d2ef91fc3f31806cf86163dab4a64dc7a3a6766e08f2f3e91049634c6e7.json  query-213e984c5d7b86e2b0a127067a8065fa7f0805573c602d64dc970c30ea744fa8.json  query-28c6c605784d9ccc0cc7b257fe810323bd38c7627ab3f297d8ba4de578200f72.json  query-2c9bf92e7cbcff18a0f09236f8be7b14c2c7ebc98bb1da456050181061d1f475.json  query-38d3868d8f68ba1590694fe2cbb41f2e9d6ad150a9a572e819be8ad06b76d8d9.json  query-48359c176f247cf4830ce78caa708821823b1752a24ad3e9809deff02d8667bf.json  query-4b3d0a5d020d60c93fb2dbf922db0b284022e14a03f9e0d05d602777005e066a.json  query-566fea7a98310316a5a09726b43cceb1edc3fdc4555dd4b9db7d665ec831f4e5.json  query-5904661ca9505d315855f48ddc2f73e014267bdbb5eb02577ab39d23e48aa760.json  query-6d70df9af2355d081231b963d82f1ede7e3e4c4525114bf7ea5fb04738477ee4.json  query-7c5c447126efcc8f71d04b6ee2602b170cc3b9aaf612bc0b516471f0fd3ed7c4.json  query-86f1dab1e4d06088b222106475c79d3bd7ed1bf384a27745edc1e726934950b3.json  query-a3ab10f6c3b23019ea1a643f530a7bb393106e1388f41a8addb8500524f63b35.json  query-ab94b667882b8dcebc12d2209561a1f5a44262f28d252d5e2d6b7d4bd36bbf69.json  query-d7794263aa0b1ba222d3c0b69c59d23e57060ece8ea8928a87f5e96c61319fba.json  query-db6bac5f7ea037b53915fecd44dbea05583c7998d1f7e1f9d8234b0093a0434d.json  query-e4440530e5817982d9274b8314c70c6f88534e0c7a0a9da988e39cae885b0c6c.json  query-e5bd5544bc6cd7808eb1011565035c3cc7d64fabfb36409a08a0ca41a13ca951.json  query-e7cc08288c55e02e33fe18e3dc86f467ba733967f3d6755d801358b63f109948.json  query-eab5bfb231ba047c75040ae1af1b6b63f496d72dc5ac74a3b9cf144a45998ff5.json  query-f325a31649b972545f346080113a2906c1ed2f36ec20df5a0cdc211e5ba7ceed.json
ark-marketplace-api/debian/: ark-marketplace-api-production.service  ark-marketplace-api-staging.service  ark-marketplace-api@.service  changelog  control  copyright  install
ark-marketplace-api/src/: api_doc.rs  build.rs  constants.rs  lib.rs  main.rs
ark-marketplace-cron/: .env.example  Cargo.toml  PERFORMANCE.md
ark-marketplace-cron/.sqlx/: query-a9c4eb2f2b68ab6f1a1f964caa1a63109c505ec5fcf74c6d8e12aac22d3e5105.json
ark-marketplace-cron/src/: db.rs  main.rs
ark-metadata-marketplace/: Cargo.toml  PERFORMANCE.md  README.md
ark-metadata-marketplace/debian/: ark-metadata-marketplace-dev.service  ark-metadata-marketplace-production.service  ark-metadata-marketplace-staging.service  ark-metadata-marketplace@.service  changelog  control  install
ark-metadata-marketplace/src/: aws_s3_file_manager.rs  elasticsearch_manager.rs  main.rs  metadata_storage.rs  types.rs
ark-metadata-refresh/: .env.example  Cargo.toml
ark-metadata-refresh/src/: aws_s3_file_manager.rs  main.rs  metadata_storage.rs
ark-orderbook-api/: .env.example  Cargo.toml
ark-orderbook-api/.sqlx/: query-388ad9ebe79ec284c8e8be7c6fd5f5bbe62d860030b9f666c9ea7f3e7fd2d6c3.json  query-4df0a951fbc88e7982f814d35451bf2fb405b69e1d703a4c7896c561a2a7c69a.json  query-7d3186d2686688db86281396432070531b01a84b085078b5b57f8283e5482652.json  query-94dde4273b7b6e41c26f180fb1ca8a127aff4cb0e2013088e76b7c68ffeec2dc.json  query-bfd2beace47edf83de660d792e4a25972368d2086ddd909560ad406897310cc8.json  query-fbac143e2eaf58dbb80fda7dafd39c28e697f8fd12f4492d3c3e4085ca49230f.json
ark-orderbook-api/src/: lib.rs  main.rs
ark-orderbook-api/tests/: auth_test.rs
ark-price-engine/: Cargo.toml
ark-price-engine/debian/: ark-price-engine.service  changelog  control  install
ark-price-engine/src/: main.rs
ark-priceengine/: Cargo.toml  Dockerfile
ark-priceengine/debian/: ark-priceengine.service  changelog  control
ark-priceengine/src/: main.rs
ark-sqlx/: .env.example  Cargo.toml  Makefile  README.md
ark-sqlx/examples/: usage.rs
ark-sqlx/migrations/: 0_lambda_usage.sql  1_arkchain.sql  2_131_token_relations.sql  3_213_token_hash.sql  4_221_token_hash.sql  4_221_token_status.sql  5_238_token_null_values.sql  6_339_auctions.sql  README.md
ark-utils/: Cargo.toml
arkchain-indexer/: .env.example  Cargo.toml  README.md
arkchain-indexer-marketplace/: .env.example  Cargo.toml  PERFORMANCE.md  README.md
arkchain-indexer-marketplace/src/: main.rs
arkchain-indexer/src/: main.rs
crates/ark-api-get-collections/: Cargo.toml
lambdas/lambda-dynamo-common/: Cargo.toml
starknet-sequencer-adapter/: .gitignore  Cargo.toml  Dockerfile  README.md
starknet-sequencer-adapter/debian/: changelog  control  install  starknet-sequencer-adapter.service
starknet-sequencer-adapter/src/: main.rs
(+930 files in other folders)
