[workspace.package]
version = "0.1.0"
authors = ["Screenshot Labs", "Starknet community"]
license = "MIT OR Apache-2.0"
readme = "README.md"
#documentation = "https://docs.rs/..."
repository = "https://github.com/ArkProjectNFTs/ark-services"
homepage = "https://arkproject.dev"
edition = "2021"

[workspace]
members = [
  "ark-metadata-marketplace",
  "ark-sqlx",
  "arkchain-indexer",
  "arkchain-indexer-marketplace",
  "ark-indexer-marketplace",
  "ark-marketplace-api",
  "ark-marketplace-cron",
  "ark-price-engine",
  "starknet-sequencer-adapter",
  "ark-indexer-transactions",
]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0"
ark-sqlx = { path = "ark-sqlx" }
arkproject = { git = "https://github.com/ArkProjectNFTs/ark-project", branch = "feat/contract-v2" }
async-trait = "0.1.73"
lambda-http-common = { path = "ark-lambdas/apigw/lambda-http-common" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "json"] }
serde = "1.0.160"
serde_json = "1.0.96"
serde_with = "3.4.0"
starknet = "0.10.0"
thiserror = "1.0.40"
