[package]
name = "ark-dynamodb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
arkproject.workspace = true
async-trait.workspace = true
aws-config = "1.1.9"
aws-sdk-dynamodb = "1.20.0"
aws-sdk-s3 = "1.21.0"
chrono = "0.4.19"
log = "0.4.17"
mockall = { version = "0.11.2", optional = true }
redis = { version = "0.24.0" }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
starknet.workspace = true
thiserror.workspace = true
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
tokio.workspace = true
uuid = "0.8"

[dev-dependencies]
mockall = "0.11.2"

[features]
mock = ["dep:mockall"]
