[package]
name = "ark-indexer-marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
ark-sqlx.workspace = true
arkproject.workspace = true
aws-config = "1.1.9"
aws-sdk-lambda = "1.18.0"
anyhow.workspace = true
async-trait.workspace = true
dotenv = "0.15.0"
tokio.workspace = true
starknet.workspace = true
regex = "1.9.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.2.0"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
url = "2.3.1"

[dev-dependencies]
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "tls-rustls"] }
