[package]
name = "ark-indexer-marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
ark-sqlx.workspace = true
arkproject.workspace = true
aws-config = "1.1.9"
aws-sdk-lambda = "1.18.0"
anyhow.workspace = true
async-trait.workspace = true
dotenv = "0.15.0"
tokio.workspace = true
starknet.workspace = true
regex = "1.9.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.2.0"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
url = "2.3.1"
aws-sdk-secretsmanager = "1.30.0"

[dev-dependencies]
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "tls-rustls",
] }

[profile.release]
debug = 0
opt-level=3
lto = true # Link Time Optimization (LTO)
codegen-units=1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort' # removes the need for this extra unwinding code.

[profile.release.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
