[package]
name = "ark-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.17"
chrono = "0.4.19"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.31.1"
anyhow.workspace = true
async-trait.workspace = true
dotenv = "0.15.0"
tokio.workspace = true
starknet = "0.6.0"
arkproject = { git = "https://github.com/ArkProjectNFTs/ark-project", tag = "v0.1.0-alpha.2"}
