[package]
name = "ark-marketplace-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web-httpauth = "0.8.1"
bigdecimal = { version = "0.3", features = ["serde"] }
env_logger = "0.11.3"
num-bigint = "0.4.4"
sqlx = { version = "0.7", features = ["postgres", "runtime-async-std", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
async-std = { version = "1.9", features = ["attributes"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
aws-config = "1.5.0"
aws-sdk-secretsmanager = "1.30.0"
anyhow = "1.0.86"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
serde_qs = "0.13.0"
