[package]
name = "ark-marketplace-api"
version = "0.1.0"
edition = "2021"

build = "src/build.rs"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.7.0"
actix-rt = "2.9.0"
actix-web-httpauth = "0.8.1"
ark-sqlx.workspace = true
apistos = { version = "0.1", features = ["extras", "qs_query"] }
schemars = { package = "apistos-schemars", version = "0.8", features = ["chrono", "uuid1", "url", "rust_decimal"] }
bigdecimal = { version = "0.3", features = ["serde"] }
env_logger = "0.11.3"
num-bigint = "0.4.4"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-async-std",
    "bigdecimal",
] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
async-std = { version = "1.9", features = ["attributes"] }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
aws-config = "1.5.0"
aws-sdk-secretsmanager = "1.30.0"
anyhow = "1.0.86"
regex = "1.5.4"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
serde_qs = "0.13.0"
futures-util = "0.3.30"
urlencoding = "2.1"
serde_urlencoded = "0.7"
chrono = "0.4"
