[package]
name = "ark-marketplace-cron"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
aws-config = "1.5.0"
aws-sdk-secretsmanager = "1.30.0"
bigdecimal = { version = "0.3", features = ["serde"] }
chrono = "0.4"
clap = "3.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-async-std", "bigdecimal"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15.0"
async-std = { version = "1.9", features = ["attributes"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
tokio-tls = "0.3.0"
tokio-native-tls = "0.3.0"
native-tls = "0.2.8"
sha2 = "0.10"
