[package]
name = "ark-metadata-marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"
dotenv = "0.15.0"
regex = "1.9.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.2.0"
sha256 = "1.4.0"
aws-sdk-secretsmanager = "1.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow.workspace = true
arkproject.workspace = true
async-trait.workspace = true
tokio.workspace = true
starknet.workspace = true
sqlx.workspace = true
mime_guess = "2.0"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
thiserror = "1.0.32"

[dev-dependencies]
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "tls-rustls",
] }

[profile.dev]
debug = 1

[profile.release]
debug = 0
opt-level = 3  # Optimize for size.
lto = true        # Link Time Optimization (LTO)
codegen-units = 1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort'   # removes the need for this extra unwinding code.

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]

[profile.release.package."*"]
opt-level = 3

[net]
git-fetch-with-cli = true
