[package]
name = "ark-metadata-marketplace"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
aws-config = "1.1.9"
aws-sdk-s3 = "1.21.0"
dotenv = "0.15.0"
regex = "1.9.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.2.0"
sha256 = "1.4.0"
aws-sdk-secretsmanager = "1.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow.workspace = true
arkproject.workspace = true
async-trait.workspace = true
tokio.workspace = true
starknet.workspace = true
sqlx.workspace = true
mime_guess = "2.0"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
thiserror = "1.0.32"
openssl = "0.10.66"
openssl-probe = "0.1.5"
tikv-jemallocator = "0.6.0"

[dev-dependencies]
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "tls-rustls",
] }

[package.metadata.deb]
maintainer = "Mehdi AISSANI <mehdi@screenshot.co>"
copyright = "2024, Mehdi AISSANI <mehdi@screenshot.co>"
extended-description = """ScreenshotLabs Ark marketplace API"""
depends = "$auto, systemd"
section = "admin"
priority = "optional"
assets = [
 ["target/release/ark-metadata-marketplace", "usr/bin/", "755"],
 ["debian/ark-metadata-marketplace@.service", "/lib/systemd/system/ark-metadata-marketplace@.service", "644"], 
]
maintainer-scripts = "debian/scripts"

[package.metadata.deb.variants.production]
assets = [
 ["target/release/ark-metadata-marketplace", "usr/bin/ark-metadata-marketplace-production", "755"],
 ["debian/ark-metadata-marketplace-production.service", "/lib/systemd/system/ark-metadata-marketplace-production.service", "644"], 
]
maintainer-scripts = "debian/scripts/production"

[package.metadata.deb.variants.staging]
assets = [
 ["target/release/ark-metadata-marketplace", "usr/bin/ark-metadata-marketplace-staging", "755"],
 ["debian/ark-metadata-marketplace-staging.service", "/lib/systemd/system/ark-metadata-marketplace-staging.service", "644"], 
]
maintainer-scripts = "debian/scripts/staging"