[package]
name = "ark-metadata-refresh"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
aws-config = "0.56.1"
aws-sdk-dynamodb = "0.33.0"
aws-sdk-s3 = "0.33.0"
dotenv = "0.15.0"
starknet.workspace = true
regex = "1.9.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
anyhow.workspace = true
arkproject.workspace = true
async-trait.workspace = true
tokio.workspace = true
ark-dynamodb.workspace = true
