[package]
name = "ark-metadata-refresh"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.19"
aws-config = "1.1.9"
aws-sdk-dynamodb = "1.20.0"
aws-sdk-s3 = "1.21.0"
dotenv = "0.15.0"
starknet.workspace = true
regex = "1.9.6"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1"
tracing-log = "0.1"
anyhow.workspace = true
arkproject.workspace = true
async-trait.workspace = true
tokio.workspace = true
ark-dynamodb.workspace = true
sha256 = "1.4.0"

[profile.release]
debug = 0
opt-level=3
lto = true # Link Time Optimization (LTO)
codegen-units=1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort' # removes the need for this extra unwinding code.

[profile.release.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]