[package]
name = "ark-orderbook-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-rt = "2.9.0"
num-bigint = "0.4.4"
sqlx = { version = "0.7", features = ["postgres", "runtime-async-std"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
async-std = { version = "1.9", features = ["attributes"] }
async-trait = "0.1"

[dev-dependencies]
env_logger = "0.9"
