[package]
name = "ark-orderbook-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-rt = "2.9.0"
actix-web-httpauth = "0.8.1"
env_logger = "0.9"
num-bigint = "0.4.4"
sqlx = { version = "0.7", features = ["postgres", "runtime-async-std"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
async-std = { version = "1.9", features = ["attributes"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[profile.release]
debug = 0
opt-level=3
lto = true # Link Time Optimization (LTO)
codegen-units=1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort' # removes the need for this extra unwinding code.

[profile.release.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
