[package]
name = "ark-price-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tikv-jemallocator = "0.6.0"
tokio = { version = "1", features = ["full"] }
openssl = "0.10.66"
openssl-probe = "0.1.5"
warp = "0.3"
tokio-tungstenite = { version = "*", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
futures-util = "0.3.30"
url = "2.5.2"

[package.metadata.deb]
maintainer = "Mehdi AISSANI <mehdi@screenshot.co>"
copyright = "2024, Mehdi AISSANI <mehdi@screenshot.co>"
extended-description = """ScreenshotLabs price engine API"""
depends = "$auto, systemd"
section = "admin"
priority = "optional"
assets = [
 ["target/release/ark-price-engine", "usr/bin/", "755"],
 ["debian/ark-price-engine.service", "/lib/systemd/system/ark-price-engine.service", "644"], 
]
maintainer-scripts = "debian/scripts"
