[package]
name = "ark-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes"] }
anyhow.workspace = true
arkproject.workspace = true
async-trait.workspace = true
bigdecimal = { version = "0.3" }
chrono = "0.4.19"
tracing = "0.1"
mockall = { version = "0.11.2", optional = true }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid = "0.8"
sqlx = { version = "0.7", features = ["postgres", "runtime-async-std", "bigdecimal"] }
num-bigint = "0.4.0"
num-traits = "0.2.16"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }

[dev-dependencies]
mockall = "0.12.1"
sqlx = { version = "0.7", features = [
    "postgres",
    "runtime-tokio-rustls",
    "tls-rustls",
] }

[features]
mock = ["dep:mockall"]

[profile.release]
debug = 0
opt-level=3
lto = true # Link Time Optimization (LTO)
codegen-units=1 # Set this to 1 to allow for maximum size reduction optimizations:
panic = 'abort' # removes the need for this extra unwinding code.

[profile.release.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "/usr/bin/clang"
rustflags = ["-Clink-arg=-fuse-ld=lld", "-Clink-arg=-Wl,--no-rosegment"]
