[package]
name = "ark-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9", features = ["attributes"] }
anyhow.workspace = true
arkproject.workspace = true
async-trait.workspace = true
bigdecimal = { version = "0.3" }
chrono = "0.4.19"
tracing = "0.1"
mockall = { version = "0.11.2", optional = true }
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid = "0.8"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-async-std",
    "bigdecimal",
] }
num-bigint = "0.4.0"
num-traits = "0.2.16"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
starknet = "0.12.0"
reqwest = { version = "0.12.9", features = ["json"] }
sqlx-core = "0.8.2"

[dev-dependencies]
mockall = "0.12.1"
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "tls-rustls",
] }

[features]
mock = ["dep:mockall"]
