[package]
name = "starknet-sequencer-adapter"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde_json = "1.0.128"
tikv-jemallocator = "0.6.0"
tokio = { version = "1.40.0", features = ["full"] }
thiserror = "1.0.63"
envy = "0.4.2"
openssl = "0.10.66"
openssl-probe = "0.1.5"
serde = { version = "1.0.204", features = ["derive"] }

[package.metadata.deb]
maintainer = "Mehdi AISSANI <mehdi@screenshot.co>"
copyright = "2024, Mehdi AISSANI <mehdi@screenshot.co>"
extended-description = """ScreenshotLabs starknet fast indexer"""
depends = "$auto, systemd"
section = "admin"
priority = "optional"
assets = [
 ["target/release/starknet-sequencer-adapter", "usr/bin/", "755"],
 ["debian/starknet-sequencer-adapter.service", "/lib/systemd/system/starknet-sequencer-adapter.service", "644"], 
]
maintainer-scripts = "debian/scripts"