[package]
name = "lambda-http-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_http = "0.8.1"
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
