[package]
name = "lambda-http-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-dynamodb.workspace = true
ark-sqlx.workspace = true
lambda_http = "0.11.1"
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
thiserror.workspace = true
num-bigint = "0.4.4"
num-traits = "0.2.16"
tracing = "0.1"
tracing-log = "0.1"
